// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceStateList: Component should render correctly 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="States"
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="datasource.dataSourceStateList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="States"
        id="datasource.dataSourceStateList.title"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "stateNavBtn",
          "label": <FormattedMessage
            defaultMessage="States"
            id="project.view.states"
            values={Object {}}
          />,
          "to": "/project/1/state",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "tagsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Tags"
            id="project.view.tags"
            values={Object {}}
          />,
          "to": "/project/1/tag-categories",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
            values={Object {}}
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
            values={Object {}}
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="datasource.dataSourceStateList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="States"
        id="datasource.dataSourceStateList.title"
        values={Object {}}
      />
    }
  >
    <DataSourceNavigation
      dataSource={
        Object {
          "id": "1",
          "name": "name",
        }
      }
      hideOnDesktop={false}
      history={
        Object {
          "goBack": [Function],
          "push": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
          },
          "url": "/",
        }
      }
    />
  </ContextHeader>
  <CounterHeader
    copy="state"
    count={2}
    right={
      <ForwardRef(styled.div)>
        <PlusButton
          customStyles={
            Object {
              "height": 40,
              "minHeight": 40,
              "width": 40,
            }
          }
          hideOnDesktop={false}
          id="createStateDesktopBtn"
          onClick={[Function]}
          type="button"
        />
      </ForwardRef(styled.div)>
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={false}
    noDataContent={
      <FormattedMessage
        defaultMessage="No States"
        id="datasource.dataSourceStateList.noData"
        values={Object {}}
      />
    }
  >
    <styled.section>
      <Styled(Component)
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              NaN years ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              —
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="0"
      >
        <Styled(H1)
          customStyles={
            Object {
              "cursor": "pointer",
              "wordBreak": "break-word",
            }
          }
          id="stateName-0"
          onClick={[Function]}
        >
          name 1
        </Styled(H1)>
        <styled.div
          customStyles={
            Object {
              "fontWeight": 300,
            }
          }
          onClick={[Function]}
        >
          <P
            id="projectDescription-0"
          >
            description
          </P>
        </styled.div>
      </Styled(Component)>
      <Styled(Component)
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              NaN years ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              —
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="1"
      >
        <Styled(H1)
          customStyles={
            Object {
              "cursor": "pointer",
              "wordBreak": "break-word",
            }
          }
          id="stateName-1"
          onClick={[Function]}
        >
          name 2
        </Styled(H1)>
        <styled.div
          customStyles={
            Object {
              "fontWeight": 300,
            }
          }
          onClick={[Function]}
        >
          <P
            id="projectDescription-1"
          >
            description
          </P>
        </styled.div>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <DataSourceNavigation
    dataSource={
      Object {
        "id": "1",
        "name": "name",
      }
    }
    hideOnDesktop={true}
    history={
      Object {
        "goBack": [Function],
        "push": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
        },
        "url": "/",
      }
    }
  />
</styled.div>
`;

exports[`DataSourceStateList: Component should render correctly when no tags 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="States"
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="datasource.dataSourceStateList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="States"
        id="datasource.dataSourceStateList.title"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "stateNavBtn",
          "label": <FormattedMessage
            defaultMessage="States"
            id="project.view.states"
            values={Object {}}
          />,
          "to": "/project/1/state",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "tagsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Tags"
            id="project.view.tags"
            values={Object {}}
          />,
          "to": "/project/1/tag-categories",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
            values={Object {}}
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
            values={Object {}}
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="datasource.dataSourceStateList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="States"
        id="datasource.dataSourceStateList.title"
        values={Object {}}
      />
    }
  >
    <DataSourceNavigation
      dataSource={
        Object {
          "id": "1",
          "name": "name",
        }
      }
      hideOnDesktop={false}
      history={
        Object {
          "goBack": [Function],
          "push": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
          },
          "url": "/",
        }
      }
    />
  </ContextHeader>
  <CounterHeader
    copy="state"
    count={0}
    right={
      <ForwardRef(styled.div)>
        <PlusButton
          customStyles={
            Object {
              "height": 40,
              "minHeight": 40,
              "width": 40,
            }
          }
          hideOnDesktop={false}
          id="createStateDesktopBtn"
          onClick={[Function]}
          type="button"
        />
      </ForwardRef(styled.div)>
    }
  />
  <LoadingWrapper
    error={null}
    loading={false}
    noData={true}
    noDataContent={
      <FormattedMessage
        defaultMessage="No States"
        id="datasource.dataSourceStateList.noData"
        values={Object {}}
      />
    }
  >
    <styled.section />
  </LoadingWrapper>
  <DataSourceNavigation
    dataSource={
      Object {
        "id": "1",
        "name": "name",
      }
    }
    hideOnDesktop={true}
    history={
      Object {
        "goBack": [Function],
        "push": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
        },
        "url": "/",
      }
    }
  />
</styled.div>
`;

exports[`DataSourceStateList: Component should render correctly with loader 1`] = `
<styled.div>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="States"
  />
  <MobileMenu
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="datasource.dataSourceStateList.subTitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="States"
        id="datasource.dataSourceStateList.title"
        values={Object {}}
      />
    }
    options={
      Array [
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Projects"
            id="project.view.projectsListPage"
            values={Object {}}
          />,
          "to": "/project/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersPageNavBtn",
          "label": <FormattedMessage
            defaultMessage="Users"
            id="project.view.usersPage"
            values={Object {}}
          />,
          "to": "/user/",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "projectDetailsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project details"
            id="project.view.projectDetails"
            values={Object {}}
          />,
          "to": "/project/1",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "dataSourceNavBtn",
          "label": <FormattedMessage
            defaultMessage="Data Sources"
            id="project.view.projectDataSources"
            values={Object {}}
          />,
          "to": "/project/1/datasource",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "stateNavBtn",
          "label": <FormattedMessage
            defaultMessage="States"
            id="project.view.states"
            values={Object {}}
          />,
          "to": "/project/1/state",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "tagsNavBtn",
          "label": <FormattedMessage
            defaultMessage="Tags"
            id="project.view.tags"
            values={Object {}}
          />,
          "to": "/project/1/tag-categories",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "usersNavBtn",
          "label": <FormattedMessage
            defaultMessage="Project Users"
            id="project.view.projectUsersPage"
            values={Object {}}
          />,
          "to": "/project/1/user",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
            "editor",
          ],
          "id": "contentNavBtn",
          "label": <FormattedMessage
            defaultMessage="Content"
            id="project.view.content"
            values={Object {}}
          />,
          "to": "/project/1/content",
          "type": "link_item",
        },
        Object {
          "allowedRoles": Array [
            "admin",
          ],
          "id": "templatesNavBtn",
          "label": <FormattedMessage
            defaultMessage="Templates"
            id="project.view.templates"
            values={Object {}}
          />,
          "to": "/project/1/templates",
          "type": "link_item",
        },
      ]
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Overview"
        id="datasource.dataSourceStateList.subTitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="States"
        id="datasource.dataSourceStateList.title"
        values={Object {}}
      />
    }
  >
    <DataSourceNavigation
      dataSource={
        Object {
          "id": "1",
          "name": "name",
        }
      }
      hideOnDesktop={false}
      history={
        Object {
          "goBack": [Function],
          "push": [Function],
        }
      }
      match={
        Object {
          "params": Object {
            "dataSourceId": "1",
          },
          "url": "/",
        }
      }
    />
  </ContextHeader>
  <CounterHeader
    copy="state"
    count={2}
    right={
      <ForwardRef(styled.div)>
        <PlusButton
          customStyles={
            Object {
              "height": 40,
              "minHeight": 40,
              "width": 40,
            }
          }
          hideOnDesktop={false}
          id="createStateDesktopBtn"
          onClick={[Function]}
          type="button"
        />
      </ForwardRef(styled.div)>
    }
  />
  <LoadingWrapper
    error={null}
    loading={true}
    noData={false}
    noDataContent={
      <FormattedMessage
        defaultMessage="No States"
        id="datasource.dataSourceStateList.noData"
        values={Object {}}
      />
    }
  >
    <styled.section>
      <Styled(Component)
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              NaN years ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              —
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="0"
      >
        <Styled(H1)
          customStyles={
            Object {
              "cursor": "pointer",
              "wordBreak": "break-word",
            }
          }
          id="stateName-0"
          onClick={[Function]}
        >
          name 1
        </Styled(H1)>
        <styled.div
          customStyles={
            Object {
              "fontWeight": 300,
            }
          }
          onClick={[Function]}
        >
          <P
            id="projectDescription-0"
          >
            description
          </P>
        </styled.div>
      </Styled(Component)>
      <Styled(Component)
        headerComponent={
          <ForwardRef(styled.ul)>
            <ForwardRef(styled.li)
              id="headerItem-0"
            >
              NaN years ago
            </ForwardRef(styled.li)>
            <ForwardRef(styled.li)
              id="headerItem-1"
            >
              —
            </ForwardRef(styled.li)>
          </ForwardRef(styled.ul)>
        }
        key="1"
      >
        <Styled(H1)
          customStyles={
            Object {
              "cursor": "pointer",
              "wordBreak": "break-word",
            }
          }
          id="stateName-1"
          onClick={[Function]}
        >
          name 2
        </Styled(H1)>
        <styled.div
          customStyles={
            Object {
              "fontWeight": 300,
            }
          }
          onClick={[Function]}
        >
          <P
            id="projectDescription-1"
          >
            description
          </P>
        </styled.div>
      </Styled(Component)>
    </styled.section>
  </LoadingWrapper>
  <DataSourceNavigation
    dataSource={
      Object {
        "id": "1",
        "name": "name",
      }
    }
    hideOnDesktop={true}
    history={
      Object {
        "goBack": [Function],
        "push": [Function],
      }
    }
    match={
      Object {
        "params": Object {
          "dataSourceId": "1",
        },
        "url": "/",
      }
    }
  />
</styled.div>
`;
